# Diminuir-tamanho-de-Pastas-com-Fotos

./: Dockerfile  LICENSE  README.md  config.yml.example  pyproject.toml  report.json  requirements.txt  vercel.json
api/: index.py  optimize.py  preview.py
public/: app.js  index.html  styleguide.html  styles.css
src/: cli.py  config.py  processor.py
src/photo_slimmer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_processor.py
web/: app.js  index.html  styleguide.html
